--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body {
 
 .wrapper {
    overflow: hidden;
+   /* відображається тільки контент всередині елемента,
+      все інше буде сховано*/
    min-height: 100%;
    position: relative;
 
@@ -450,11 +452,12 @@ body {
 /*========================*/
 
 .decor {
-   position: absolute;
+   /*position: absolute;*/
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
+
 }
 
 .decor__item-1 {
@@ -506,69 +509,110 @@ body {
 }
 
 .box {
+   /*row*/
    display: flex;
-   row-gap: 30px;
+   margin: 0 -15px;
    flex-wrap: wrap;
-   justify-content: space-between;
-   margin-bottom: 130px;
+   row-gap: 30px;
+
 }
 
-
-
 .box__cards {
+   /*column*/
+   flex: 0 1 50%;
+   padding: 0 15px;
 
-   flex: 0 1 calc(50% - 1em);
+}
+
+.box__cards__content {
+   /*item*/
    display: flex;
+   flex-direction: row;
+   flex: 0 0 50%;
+   background: #FFFFFF;
    border: 1px solid #E5E8ED;
-   box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+   box-shadow: 0px 80px 80px -20px rgb(154 156 165 / 16%), 0px 30px 24px -10px rgb(154 156 165 / 10%), 0px 12px 10px -6px rgb(154 156 165 / 8%), 0px 4px 4px -4px rgb(30 33 44 / 5%);
    border-radius: 4px;
 }
 
+@media(max-width: 470px) {
+
+   .box__cards__content {
+      flex-direction: column;
+   }
+
+   .content-body__title h2 {
+      font-size: 28px;
+   }
+
+   .body-main__title {
+      font-size: 28px;
+   }
+
+   .block__main__title {
+      font-size: 28px;
+   }
+
+   .item-advantages__value {
+      font-size: 36px;
+   }
+}
 
 
 .box__cards__image {
-   position: relative;
-   padding-bottom: 36%;
-   flex: 0 0 214px;
+   flex: 0 0 33%;
 }
 
 .box__cards__image img {
-   position: absolute;
-   object-fit: contain;
-   top: 0;
-   left: 0;
-   height: 100%;
-   width: 100%;
+   vertical-align: top;
+}
+
+
+@media (max-width: 470px) {
+
+   .box__cards__image {
+      align-self: center;
+   }
 }
 
 .box__cards__description {
-   padding: 32px;
    display: flex;
+   flex: 1 1 60%;
+   flex-wrap: wrap;
+   padding: 32px;
+   gap: 20px;
    flex-direction: column;
-   justify-content: space-around;
-   align-items: start;
+
 }
 
 .box__cards__name {
    display: inline-block;
-   border-radius: 4px;
-   padding: 1px 8px;
+   font-weight: 400;
+   font-size: 14px;
    line-height: 1.5;
+   padding: 0 7px;
    color: #FFFFFF;
+   align-self: flex-start;
 }
 
+.box__cards__item {
+   font-weight: 700;
+   font-size: 20px;
+   line-height: 1.5;
+   color: #1E212C;
+}
 
 .box__cards__list {
+   font-weight: 400;
    font-size: 18px;
-   line-height: 150%;
+   line-height: 1.5;
    color: #787A80;
 }
 
 span {
-
    font-weight: 700;
    font-size: 18px;
-   line-height: 150%;
+   line-height: 1.5;
    color: #FF4242;
 }
 
